Style navigation bar using css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,8 +28,23 @@ header {
     box-shadow: 0 2px 2px #3a3a3a;
 }
 
+header a {
+    text-decoration: none;
+}
+
 #logo {
     font-family: 'Farro', sans-serif;
+    letter-spacing: 2px;
+    color: #209CEE;
+}
+
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+    list-style-type: none;
+}
+#menu > li {
+    margin-bottom: 1em;
 }
 
 /* Main content */
