--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,25 @@ main {
     height: 600px;
     width: 100%;
     background: url("../images/hero-image.jpg") no-repeat center center/cover;
+    position: relative;
 }
+
+#cover-text {
+    /* Final rgba value sets the opacity so it is semi-transparent */
+    background-color: rgba(32, 156, 238, 0.7);
+    font-size: 130%;
+    position: absolute;
+    top: 350px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff;
+}
+
 
 /* Footer */
 #social-networks {
