--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,13 @@ main {
     padding: 20px;
 }
 
+#inclusion-image {
+    border-radius: 50%;
+    max-width: 60%;
+    margin: auto;
+    padding: 20px;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
