--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,7 +148,7 @@ h3 {
 }
 
 /* Ensure each card-body within the columns stretches to the same height */
-#external-resource {
+.external-resource {
     flex: 1;
     display: flex;
     flex-direction: column;
